microservice-ci-cd/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-microservice
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30000
  selector:
    app: my-microservice
