microservice-ci-cd/k8s/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-critical-vulnerabilities
spec:
  rules:
    - name: block-critical-vulnerabilities
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Pods with critical vulnerabilities are not allowed."
        pattern:
          spec:
            containers:
              - name: "*"
                image: "!*:*-CRITICAL"
